--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
    
 
-    <div class="profile-picture"> 
+    <div class="profile"> 
         <img src="assets/TEXTO 1.jpeg" alt="FOTO DE PERFIL">
     </div>
 
