--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <BR><BR>
         <center>
             <div class="button">
-                <a href="https://clique.ink/QtYjj6" target="_blank" class="CONHECER ASSINATURA">
+                <a href="carrinho.index.html" target="_blank" class="CONHECER ASSINATURA">
                     CONHECER ASSINATURA
                 </a>
     
